--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
 
 python:
   install:
-    - requirements: requirements.txt
+    - requirements: docs/requirements.txt
 
 sphinx:
   configuration: docs/source/conf.py
